# abroot-rollback-notifier

./: .gitignore  README.md  abroot-rollback-notifier.in  abroot-rollback-notifier.pot  meson.build
.github/workflows/: ci.yml
po/: LINGUAS  POTFILES  abroot-rollback-notifier.pot  ar.po  de.po  en_GB.po  en_US.po  eo.po  es.po  fi.po  fr.po  ga.po  id.po  meson.build  nl.po  pt.po  pt_BR.po  ro.po  ru.po  sv.po  ta.po  uk.po  vi.po  zh_Hans.po  zh_Hant.po
